# Eli

./: .gitignore  CMakeLists.txt  README.md
Eli_examples/example/applications/app1/: CMakeLists.txt  main.cpp
Eli_examples/example/applications/wxGui_app2/: CMakeLists.txt
Eli_examples/example/applications/wxGui_app2/include/: LoopDialog.h  gui_applicationApp.h  gui_applicationMain.h
Eli_examples/example/applications/wxGui_app2/src/: LoopDialog.cpp  gui_applicationApp.cpp  gui_applicationMain.cpp  resource.rc
Eli_examples/example/test_programs/: dimens_test_pic.eli  dimens_test_video.eli  multimeter3_p.eli  multimeter3_v.eli  numbers.eli  numbers_rotated.eli  nuts.eli  nuts_video.eli  pcb.eli  pcb_video.eli
Eli_examples/videos/: coin.avi  multimeter.avi  nuts.avi  pcb.avi
example/test_programs/: numbers.eli
help/: Conversion_AdaptThresh.htm  Conversion_AddWeighted.htm  Conversion_Color.htm  Conversion_Corners.htm  Conversion_Invert.htm  Conversion_Morfology.htm  Conversion_Roi.htm  Conversion_Threshold.htm  Object_Labels.htm  Source_CreateVideoFile.htm  Source_GetPictureParam.htm  Source_NewImage.htm~  Source_QueryFrame.htm  Source_SaveImage.htm~  System_Jump.htm  System_Jump.htm~  System_Macro.htm~  System_Math.htm  System_Wait.htm  about.htm~
include/: CameraCalibration.h  CameraProperties.h  ContourDescript.h  ContourDescript2.h  ContourDescript3.h  ContourDescript4.h  EliLib.h  ExportParam.h  LOGMES.h  MaskPictureEdit.h  VariableWindow.h  commands1.h  commands2.h  commands3.h  commands_main.h  editPicture.h  eliApp.h  eliMain.h  libmain.h
other/: eli.desktop  readme.txt
share/Eli/help/: ContourParameter.htm  Contours_Draw.htm  Contours_Find.htm  Conversion_AdaptiveThreshold.htm  Conversion_Canny.htm  Conversion_Edge.htm  Conversion_EqualHist.htm  Conversion_FloodFill.htm  Conversion_MaskPicture.htm  Conversion_Resize.htm  Conversion_RotateFlip.htm  Conversion_Scale.htm  Conversion_Smooth.htm  EditObjectFind.htm  FilterWindow.htm  MainApplicationWindow.htm  ObjectDebugWindow.htm  ObjectModule.htm  ObjectProgramWindow.htm  Object_CharToString.htm  Object_Count.htm  Object_Draw.htm  Object_Find.htm  Object_ParamMath.htm  Object_ToChar.htm  Source_CaptureProperty.htm  Source_CloneImage.htm  Source_NewImage.htm  Source_OpenFile.htm  Source_OpenFile.htm~  Source_QueryFrame.htm  Source_ReadCamera.htm  Source_ReadCamera.htm~  Source_ReadVideo.htm  Source_ReleaseVideoWriter.htm  Source_SaveImage.htm  Source_WriteVideoFrame.htm  System_Macro.htm  System_Results.htm  System_Results.htm~  (+1 more)
share/Eli/help/pictures/: Thumbs.db
src/: CameraCalibration.cpp  CameraProperties.cpp  ContourDescript.cpp  ContourDescript2.cpp  ContourDescript3.cpp  ContourDescript4.cpp  ExportParam.cpp  LOGMES.cpp  MaskPictureEdit.cpp  VariableWindow.cpp  commands1.cpp  commands2.cpp  commands3.cpp  commands_main.cpp  editPicture.cpp  eliApp.cpp  eliMain.cpp  libmain.cpp  resource.rc
